# learn-django

./: Dockerfile  Dockerfile-arm  Makefile  README.md  pyproject.toml  requirements.txt
1_basics/: variables.py
2_basic_blog/: subscribe_page.py
draft/l1t1_functions/: variables_in_functions_bad_practice.py
draft/l2_basic_blog/: README.md  admin_page.py  landing_page.py
draft/l3_imports/: README.md
draft/l3_while_loop/: README.md
draft/l4_always_check_exit_words/: README.md  admin_page.py  main.py  prompts.py  subscribe_page.py
l1_basics/: README.md
l1t1_functions/: variables_in_functions_good_practice.py
l3_imports/: subscribe_page.py
l3_while_loop/: admin_page.py  landing_page.py  main.py
l4_always_check_exit_words/: admin_page.py  subscribe_page.py
learn_dj/: db.sqlite3
learn_dj/app_example/: forms.py  models.py  my_sql_connection.py  urls.py  views.py
learn_dj/app_example/files/: hello.html
learn_dj/app_example/templates/app_example/: links.html  new_transaction.html  template_example.html  transactions.html
learn_dj/learn_dj/: asgi.py  settings.py  urls.py  views.py  wsgi.py
learn_dj/templates/: base.html
n3_imports/: main.py
web/: base.html  bootstrap_styling.html  some_styling.css  some_styling.html  tables.html
web/forms/: confirm.html  form.html
